--- a/.meta-cnc.yaml
+++ b/.meta-cnc.yaml
@@ -31,9 +31,12 @@ variables:
     description: IP address or FQDN or the NGFW
     default: 192.168.55.10
     type_hint: IP or FQDN
-  - name: apikey
-    description: API Key for the NGFW
+  - name: username
+    description: NGFW Username
     type_hint: text
+  - name: password
+    description: NGFW Password
+    type_hint: The password to the NGFW
   - name: AS_Profile
     description: Name of the existing Anti-Spyware security profile where the DNS Sinkhole feature is configured.
     default: strict
@@ -55,7 +58,7 @@ variables:
 # snippets used for api configuration including xpath and element as file name
 # files will load in the order listed
 snippets:
-  - name: autotagging_isolate
+  - name: script
     file: packetpurgatory.py
 # ---------------------------------------------------------------------
 # end of snippets section
