--- a/.pan-cnc/clean/.meta-cnc.yaml
+++ b/.pan-cnc/clean/.meta-cnc.yaml
@@ -3,7 +3,7 @@
 # unique snippet name
 name: UNPacketPurgatory
 # label used for menu selection
-label: Auto-tagging & DNS Sinkhole [STEP-2]: Override
+label: Auto-tagging & DNS Sinkhole [STEP-2] - Override
 description: This skillet will notify the user of malicious activity detected on their machine and provide an override to be self-service. You will need to import the URL Filtering Continue and Override Page that's located within the GitHub repository.
 
 # type of device configuration
