--- a/.pan-cnc/quarantine/.meta-cnc.yaml
+++ b/.pan-cnc/quarantine/.meta-cnc.yaml
@@ -27,15 +27,15 @@ labels:
 # type_hint defines the form field used by panhandler
 # type_hints can be text, ip_address, or dropdown
 variables:
-  - name: firewall
+  - name: TARGET_IP
     description: IP address or FQDN or the NGFW
     default: 192.168.55.10
     type_hint: IP or FQDN
   - name: username
-    description: NGFW Username
+    description: TARGET_USERNAME
     type_hint: text
   - name: password
-    description: NGFW Password
+    description: TARGET_PASSWORD
     type_hint: The password to the NGFW
   - name: log_forwarding
     description: Name of the Log Forwarding Profile to autotag infected hosts
