--- a/.pan-cnc/quarantine/.meta-cnc.yaml
+++ b/.pan-cnc/quarantine/.meta-cnc.yaml
@@ -31,11 +31,11 @@ variables:
     description: IP address or FQDN or the NGFW
     default: 192.168.55.10
     type_hint: IP or FQDN
-  - name: username
-    description: TARGET_USERNAME
+  - name: TARGET_USERNAME
+    description: NGFW Username
     type_hint: text
-  - name: password
-    description: TARGET_PASSWORD
+  - name: TARGET_PASSWORD
+    description: NGFW Password
     type_hint: The password to the NGFW
   - name: log_forwarding
     description: Name of the Log Forwarding Profile to autotag infected hosts
